Add leaflet-rails. Shoo turbolinks

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,10 +7,11 @@
  *
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
+ *
+ * = require leaflet
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
 
 @import "welcome";
 @import "projects";
