Add vague notes

--- a/app/views/projects/list.html.erb
+++ b/app/views/projects/list.html.erb
@@ -44,6 +44,10 @@
       <iframe id="preview" name="preview" title="Go make me a decent widget or somesuch"></iframe>
     
       <div id="map" />
+
+      <div class="alert alert-danger" title="TODO">
+        Does this work better above or under the list? Hard to tell on my screen
+      </div>
     </div>
   </div>
 
