--- a/app/views/projects/list.html.erb
+++ b/app/views/projects/list.html.erb
@@ -40,14 +40,16 @@
     </div>
 
     <div class="project-preview col-md-4">
+
+      <div class="alert alert-danger" title="TODO">
+        Does this work better as a sidebar or under the list? Hard to tell on my screen
+      </div>
+
       <!--<img id="preview"  src="" alt="" />-->
       <iframe id="preview" name="preview" title="Go make me a decent widget or somesuch"></iframe>
     
       <div id="map" />
 
-      <div class="alert alert-danger" title="TODO">
-        Does this work better above or under the list? Hard to tell on my screen
-      </div>
     </div>
   </div>
 
