Add more dummy widgets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<ul class="nav nav-pills">
+  <li><a href="/">Home</a></li>
+  <li><a href="#">Help</a></li>
+</ul>
 
 <%= yield %>
 
