--- a/app/views/projects/list.html.erb
+++ b/app/views/projects/list.html.erb
@@ -79,6 +79,15 @@
       <small>Contains shape files, links to images, etc</small>
     </div>
 
+    <div class="col-md-2 col-md-offset-1">
+      <h4> Share </h4>
+      <a class="btn btn-primary">
+        Generate link
+      </a>
+      <br />
+      <small>Share this project with your crowd</small>
+    </div>    
+
   </div>
 </div>
 <script type="text/javascript">
