--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,27 +5,24 @@
 
       <div class="lead">We love open data, because it lets you do neat things.</div>
       <p>But often it's too hard to enrich and maintain data. We're here to help.</p>
-  
+
     </div>
   </main>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4" style="text-align:center">
-        <h3>Add your data</h3>
-        <p>Upload a shp or csv file</p>
-        <p>Describe your data</p>
-      </div>
-      <div class="col-md-4" style="text-align:center">
-        <h3>Ask for Photos</h3>
-        <p>Share a link with participants</p>
-        <p>Get crowdsourced photos</p>
-      </div>
-      <div class="col-md-4" style="text-align:center">
-        <h3 style="text-align:center">Download results</h3>
-        <p>One easy zip</p>
-        <p>Easy to republish</p>
-
-      </div>
+  <div class="column-group horizontal-gutters">
+    <div class="all-33 order-3" style="text-align:center">
+      <h3>Add your data</h3>
+      <p>Upload a shp or csv file</p>
+      <p>Describe your data</p>
+    </div>
+    <div class="all-33 order-1" style="text-align:center">
+      <h3>Ask for Photos</h3>
+      <p>Share a link with participants</p>
+      <p>Get crowdsourced photos</p>
+    </div>
+    <div class="all-33 order-2" style="text-align:center">
+      <h3>Download results</h3>
+      <p>One easy zip</p>
+      <p>Easy to republish</p>
     </div>
   </div>
 
@@ -48,7 +45,7 @@
 
 
   <div class="container" style="margin-top: 50px">
-    
+
     <h2>Use cases</h2>
 
     <div class="row">
