Building items / photos pages & backend

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 <div class="projects">
   <div class="row">
     <div class="project-items col-md-8" style="overflow-y: scroll; max-height: 400px">
-      <%= render 'item_list', project: @project %>
+      <%= render 'list', project: @project %>
     </div>
 
     <div class="project-preview col-md-4">
