--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,7 +1,7 @@
 <div class="projects">
   <div class="row">
     <div class="project-items col-md-8" style="overflow-y: scroll; max-height: 400px">
-      <%= render 'item_list', project: @project %>
+      <%= render 'list', project: @project, current_item: @item %>
     </div>
 
     <div class="project-preview col-md-4">
@@ -9,10 +9,12 @@
       <div class="alert alert-danger" title="TODO">
         Does this work better as a sidebar or under the list? Hard to tell on my screen
       </div>
-
-      <img id="preview"  src="" alt="" />
     
       <div id="map" />
+
+      <% @item.photos.each do |photo| %>
+        <%= image_tag photo.image.url(:large) %>
+      <% end %>
 
     </div>
   </div>
@@ -30,8 +32,6 @@
         Put this in the previous screen?
       </div>
     </div>
-
-
 
     <div class="col-md-2 col-md-offset-1">
       <h4> Download </h4>
@@ -54,44 +54,3 @@
 
   </div>
 </div>
-<script type="text/javascript">
-var listApplication = {
-  init: function () {
-    var map = listApplication.map;
-    $('a[data-coords]').click(listApplication.actions.view);
-
-    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
-  },
-  map: L.map('map'),
-  marker: null,
-  actions: {
-    view: function(e) {
-      var map = listApplication.map;
-      var coords = $(e.target).data('coords').split(",");
-      
-      map.setView(coords, 17);
-
-      if (listApplication.marker) {
-        map.removeLayer(listApplication.marker);
-      }
-      // TODO Handlebars?
-      var template = '';
-      
-      for (key in $(e.target).data()) {
-        template += String(key) + ": " + String($(e.target).data(key)) + "<br />";
-      }
-      listApplication.marker = L.marker(coords).addTo(map)
-          .bindPopup(template);
-
-      $('#preview').attr('src', $(e.target).data('imageUrl'));
-    }
-  }
-
-};
-
-
-listApplication.init();
-
-</script>
