--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="ink-grid">
-  <div class="column-group push-center push-middle">
-    <div class="all-90">
+  <div class="column-group push-center">
+    <div class="all">
     <nav class="ink-navigation">
     <ul class="menu horizontal black">
       <li><a href="/">Home</a></li>
