Improve the layout.

--- a/app/views/items/_list.html.erb
+++ b/app/views/items/_list.html.erb
@@ -1,6 +1,6 @@
 <% current_item ||= nil %>
 
-<table class="table">
+<table class="ink-table">
   <thead>
     <% project.headers.each do |heading| %>
       <th><%= heading.to_s.titleize %></th>
