--- a/app/views/projects/_item_list.html.erb
+++ b/app/views/projects/_item_list.html.erb
@@ -15,8 +15,8 @@
             <% if !record.data[heading] %>
               <td>
                 <form>
-                  <input type="file" title="TODO: http://jsfiddle.net/fyneworks/2LLws/ ?" />
-                  <input type="submit" />
+                  <input type="file" title="TODO: http://jsfiddle.net/fyneworks/2LLws/ ?" class="ink-button" />
+                  <button class="ink-button">Upload</button>
                 </form>
               </td>
             <% end %>
