--- a/app/views/projects/list.html.erb
+++ b/app/views/projects/list.html.erb
@@ -26,7 +26,7 @@
       <br />
       <small>Choose a photo license</small>
 
-      <div class="alert alert-danger" title="TODO">
+      <div class="" title="TODO">
         Put this in the previous screen?
       </div>
     </div>
@@ -35,7 +35,7 @@
 
     <div class="col-md-2 col-md-offset-1">
       <h4> Download </h4>
-      <a class="btn btn-primary">
+      <a class="ink-button">
         <i class="icon-zip" />
         .zip
       </a>
@@ -45,7 +45,7 @@
 
     <div class="col-md-2 col-md-offset-1">
       <h4> Share </h4>
-      <a class="btn btn-primary">
+      <a class="ink-button">
         Generate link
       </a>
       <br />
