--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <div class="ink-grid">
   <div class="column-group push-center">
     <div class="all">
+      <span class="logo ink-label orange">ShaprGram</span>
       <nav class="ink-navigation">
       <ul class="menu horizontal black">
         <li><a href="/">Home</a></li>
@@ -17,7 +18,8 @@
       </ul>
       </nav>
 
-    <%= yield %>
+      <%= yield %>
+
     </div>
   </div>
 </div>
