--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,61 +29,59 @@
 
 <div class="column-group horizontal-gutters vertical-gutters">
   <div class="all-80 push-center highlight">
+
     <h4 class="col-md-offset-2">New Project</h4>
     <form method="get" action="/projects/1/list" class="ink-form">
       <div class="column-group gutters">
+
         <div class="control-group all-33">
-        <label for="name">Name:</label>
-        <div class="control">
-          <input type="text" name="name" placeholder="My great project" />
+          <label for="name">Name:</label>
+          <div class="control">
+            <input type="text" name="name" placeholder="My great project" />
+          </div>
         </div>
-      </div>
-      <div class="control-group all-33">
-        <label for="name">URL:</label>
-        <div class="control">
-          <input type="url" name="url" title="Paste a URL from data.gov.au or similar directly to your resource" /> <small class="pull-right">(csv w/coordinates or shp)</small>
+        <div class="control-group all-33">
+          <label for="name">URL:</label>
+          <div class="control">
+            <input type="url" name="url" title="Paste a URL from data.gov.au or similar directly to your resource" /> <small class="pull-right">(csv w/coordinates or shp)</small>
+          </div>
         </div>
-      </div>
-      <div class="control-group all-33">
-        <div class="control">
-          <br>
-          <button class="ink-button">Begin</button>
+        <div class="control-group all-33">
+          <div class="control">
+            <br>
+            <button class="ink-button">Begin</button>
+          </div>
         </div>
-      </div>
+
       </div>
     </form>
-  </div>
+
   </div>
 </div>
 
-<div class="column-group horizontal-gutters vertical-gutters">
-<div class="all-80  push-center ">
-
-  <h2>Who's this for</h2>
-  <p>This application is aimed at government data producers who may not have the full resources of a geospatial team at their beck and call, who need to crowdsource information about their assets; and anyone that can benefit from visual imagery to supplement raw data.</p>
-
+<div class="horizontal-gutters vertical-gutters">
+  <div class="all-90 push-center">
+    <h2>Who's this for</h2>
+    <p>This application is aimed at government data producers who may not have the full resources of a geospatial team at their beck and call, who need to crowdsource information about their assets; and anyone that can benefit from visual imagery to supplement raw data.</p>
 
     <h2>Use cases</h2>
 
+    <h3>Inventory</h3>
+    <p>Adelaide City Council produces a number of data sets regarding picnic sites, which is published on their website and as open data. Unfortunately no one was able to snap a few photos at the time, and google streetview doesn't reach these places.</p>
 
-      <h3>Inventory</h3>
-      <p>Adelaide City Council produces a number of data sets regarding picnic sites, which is published on their website and as open data. Unfortunately no one was able to snap a few photos at the time, and google streetview doesn't reach these places.</p>
+    <p>Using this tool, anyone with a shapefile or CSV can put up a list of assets that need photographs, and download a simple .zip file with an enhanced dataset.</p>
 
-      <p>Using this tool, anyone with a shapefile or CSV can put up a list of assets that need photographs, and download a simple .zip file with an enhanced dataset.</p>
-
-
-
-      <h3>Asset tracking</h3>
-      <p>Just spent a few hard earned rate payer dollars on nice new benches? Use this tool to capture a visual representation of the asset at the time of installation; and during routine tasks - letting you see how your assets survive in the wild, when they need repair or more.</p>
+    <h3>Asset tracking</h3>
+    <p>Just spent a few hard earned rate payer dollars on nice new benches? Use this tool to capture a visual representation of the asset at the time of installation; and during routine tasks - letting you see how your assets survive in the wild, when they need repair or more.</p>
 
     <h4>Much more</h4>
-      <ul>
-        <li>Parking spaces & restricted parking - all parking inspectors carry cameras, making it trivial to document your city</li>
-        <li>Signs - need to capture the signed speed limits across multiple authorities? Use this tool to complete your dataset (@@link to geelong city council efforts)</li>
-        <li>Tree health - Let members of your community tell you when a tree is ill, growing too much or more - find out *before* it becomes a costly issue to rectify.</li>
-      </ul>
+    <ul>
+      <li>Parking spaces & restricted parking - all parking inspectors carry cameras, making it trivial to document your city</li>
+      <li>Signs - need to capture the signed speed limits across multiple authorities? Use this tool to complete your dataset (@@link to geelong city council efforts)</li>
+      <li>Tree health - Let members of your community tell you when a tree is ill, growing too much or more - find out *before* it becomes a costly issue to rectify.</li>
+    </ul>
 
-</div>
+  </div>
 </div>
 
 
