--- a/app/views/items/_list.html.erb
+++ b/app/views/items/_list.html.erb
@@ -8,24 +8,27 @@
     <% end %>
     <th>Photos</th>
     <th>Actions</th>
+    <th>Upload</th>
   </thead>
 
   <tbody>
-    <% project.items.each do |item| %>
+    <% items.each do |item| %>
       <tr <% if item == current_item %>style='background-color:#eee;'<% end %>>
         <% project.headers.each do |column| %>
           <td><%= item.try(:send, column) %></td>
         <% end %>
         <td><%= item.photos.count %></td>
-        <td><%= link_to 'View', project_item_path(project, item) %></td>
+        <td><%= link_to 'View', project_item_path(project, item, page: params[:page]) %></td>
         <td>
           <%= simple_form_for(Photo.new(item_id: item.id)) do |f| %>
             <%= f.input :item_id, as: :hidden %>
             <%= f.file_field :image %>
-            <%= f.submit %>
+            <%= f.submit value: 'Save' %>
           <% end %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= paginate items %>
