Add dynatables, add new display and index page for projects.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  * = require leaflet
  * = require fotorama
+ * = require jquery.dynatable
  */
 /*@import "bootstrap-sprockets";
 @import "bootstrap";*/
