--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,20 +31,21 @@
   <div class="all-80 push-center highlight">
 
     <h4 class="col-md-offset-2">New Project</h4>
-    <form method="get" action="/projects/1/list" class="ink-form">
+    <%= form_for @project, :html => { :class => 'ink-form'} do |f| %>
       <div class="column-group gutters">
 
         <div class="control-group all-33">
-          <label for="name">Name:</label>
+          <%= f.label :name %>
           <div class="control">
-            <input type="text" name="name" placeholder="My great project" />
+            <%= f.text_field :name, :placeholder => "My great project" %>
           </div>
         </div>
         <div class="control-group all-33">
-          <label for="name">URL:</label>
+          <%= f.label :data_source_uri, "URL" %>
           <div class="control">
-            <input type="url" name="url" title="Paste a URL from data.gov.au or similar directly to your resource" /> <small class="pull-right">(csv w/coordinates or shp)</small>
+            <input type="text" name="data_source_uri" title="Paste a URL from data.gov.au or similar directly to your resource" value="http://opendata.adelaidecitycouncil.com/seats/seats.csv" />
           </div>
+          <small class="pull-right">(csv w/coordinates or shp)</small>
         </div>
         <div class="control-group all-33">
           <div class="control">
@@ -54,6 +55,7 @@
         </div>
 
       </div>
+      <% end %>
     </form>
 
   </div>
