--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,4 +2,4 @@
 
 <p>Now you need to choose your columns from your data</p>
 
-<button class="ink-button">Start adding photos</button>
+<a  href="<%= url_for(:controller => :items, :project_id => @project) %>" class="ink-button">Start adding photos</a>
