Adding 'near me' functionality

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,13 +6,9 @@
 
     <div class="project-preview col-md-4">
 
-      <div class="alert alert-danger" title="TODO">
-        Does this work better as a sidebar or under the list? Hard to tell on my screen
-      </div>
-
       <img id="preview"  src="" alt="" />
     
-      <div id="map" />
+      <div id="map"></div>
 
     </div>
   </div>
