--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
 <div class="ink-grid">
   <div class="column-group push-center">
-    <div class="all">
-      <div class="logo"><img src="assets/logo.png" height="60" /></div>
+    <div class="all-90">
+      <div class="logo"><img src="/assets/logo.png" height="60" /></div>
       <nav class="ink-navigation">
       <ul class="menu horizontal black">
         <li><a href="/">Home</a></li>
