--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <div class="ink-grid">
   <div class="column-group push-center">
     <div class="all">
-      <div class="logo"><img src="assets/logo.png" height="60" /></div>
+      <div class="logo"><img src="/assets/logo.png" height="60" data-no-retina /></div>
       <nav class="ink-navigation">
       <ul class="menu horizontal black">
         <li><a href="/">Home</a></li>
