--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,6 @@
-<p>Your url for your project is: <%= project_url(@project) %> share it with others to contribute</p>
+<h2>Setup Your Data</h2>
+
+<p>Your url for your project is: <%= link_to(project_items_url(@project),project_items_url(@project)) %> share it with others to contribute</p>
 
 <p>Now you need to choose your columns from your data</p>
 
