http://fc04.deviantart.net/fs51/f/2009/288/1/1/Vegeta__s_Galick_gun_by_Playat1.gif

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,15 +11,14 @@
  * = require leaflet
  * = require fotorama
  * = require jquery.dynatable
+ * = require ink
+ * = require ink-flex
+ * = require font-awesome
+ * = require welcome
+ * = require projects
  */
 /*@import "bootstrap-sprockets";
 @import "bootstrap";*/
-@import "ink";
-@import "ink-flex";
-@import "font-awesome";
-
-@import "welcome";
-@import "projects";
 
 .highlight {
 padding: 1em;
