Public projects link added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <ul class="menu horizontal black">
         <li><a href="/">Home</a></li>
         <li><a href="#">Help</a></li>
+        <li><a href="/projects">Public Projects</a></li>
       </ul>
       </nav>
       <br>
