--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,40 @@
+<h1><%= @project.name %></h1>
+
 <h2>Manage Your Data</h2>
 
 <p>Your url for your project is: <%= link_to(project_items_url(@project),project_items_url(@project)) %> share it with others to contribute</p>
 
 <div class="column-group horizontal-gutters vertical-gutters">
   <div class="all-80 push-center highlight">
-    <h3>Add a Data Source</h3>
+      
+    <% if @project.data_imports.count > 0 %>
+      <h3>Current Data Sources</h3>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Data Source</th>
+            <th>Status</th>
+            <th>Actions</th>
+          </tr>
+        </thead>  
+        <tbody>
+          <% @project.data_imports.each do |import| %>
+            <tr>
+              <td><%= import.data_source_uri %></td>
+              <td><%= import.status %></td>
+              <td>
+                <a href=''>Map Data Fields</a> |
+                <a href=''>Re-Import</a> |
+                <a href=''>Delete Data Set</a>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
+
+    <h3>Add Data Sources</h3>
 
     <%= simple_form_for(DataImport.new(project_id: @project.id)) do |f| %>
       <div class="control-group all-33">
@@ -15,7 +45,7 @@
       <div class="control-group all-33">
         <div class="control">
           <br>
-          <button class="ink-button">Upload</button>
+          <button class="ink-button">Import Data Set</button>
         </div>
       </div>
     <% end %>
@@ -26,15 +56,15 @@
   <div class="all-80 push-center highlight">
     <h3>Affix a Geographic Boundary</h3>
 
-    <%= simple_form_for(DataImport.new(project_id: @project.id)) do |f| %>
+    <%= simple_form_for(@project) do |f| %>
       <div class="control-group all-33">
-        <%= f.input :data_source_uri, label: 'Data Source URI' %>
+        <%= f.input :administrative_boundry_id, collection: AdministrativeBoundry.all.order(:name) %>
         <small class="pull-right">(csv w/coordinates, kml or shp)</small>
       </div>
       <div class="control-group all-33">
         <div class="control">
           <br>
-          <button class="ink-button">Upload</button>
+          <button class="ink-button">Update</button>
         </div>
       </div>
     <% end %>
