Allow editing of SRID's & apply default ones to datasets we know. Improvements to name mapping on re-import.

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,13 @@
 <div class="projects">
+  
+  <h2><%= @project.name %></h2>
+  <p>
+    <%= link_to 'back to project page', project_path(@project) %>
+  </p>
   <div class="row">
+
+
+
     <div class="project-items all">
       <%= render 'list', project: @project, items: @items %>
     </div>
