Add image chooser.

--- a/app/views/items/_list.html.erb
+++ b/app/views/items/_list.html.erb
@@ -1,5 +1,5 @@
 
-<table class="ink-table items" id="items-table">
+<table class="ink-table items alternating hover " id="items-table">
   <thead>
       <th>Name</th>
       <th>Point</th>
